Update 103.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 1.md
@@ -178,7 +178,7 @@ Every  2.0s: uptime          debian: Tue Aug 20 23:31:27 2019
 
  23:31:27 up 21 min,  1 user,  load average: 0.00, 0.00, 0.00
 ```
-Команда выполняется до тех пор, пока не будет прервана, поэтому нам придется остановить ее с помощью `Ctrl`+`C`. В качестве вывода мы получаем две строки: первая относится к `watch` и сообщает нам, как часто команда будет запускаться(`Every 2.0s: uptime`), какую команду/программу нужно отслеживать(`uptime`), а также имя хоста и дата (`debian: Tue Aug 20 23:31:27 2019`). Вторая строка принадлежит `uptime` и включает время (`23:31:27`), сколько времени прошло с момента загрузки системы(`up 21 min`), количество активных пользователей (`1 user`) и среднюю нагрузку на систему или количество процессов в состоянии выполнения или ожидания в течение последних 1, 5 и 15 минут (`load average: 0.00, 0.00, 0.00`). Точно так же вы можете проверить использование памяти при создании новых процессов с помощью `watch free`:
+Команда выполняется до тех пор, пока не будет прервана, поэтому нам придется остановить ее с помощью `Ctrl`+`C`. В качестве вывода мы получаем две строки: первая относится к `watch` и сообщает нам, как часто команда будет запускаться(`Every 2.0s: uptime`), какую команду/программу нужно отслеживать(`uptime`), а также имя хоста и дата (`debian: Tue Aug 20 23:31:27 2019`). Вторая строка принадлежит `uptime` и включает время (`23:31:27`), сколько времени прошло с момента загрузки системы(`up 21 min`), количество активных пользователей (`1 user`) и среднюю нагрузку на систему или количество процессов в состоянии выполнения или ожидания в течение последних 1, 5 и 15 минут (`load average: 0.00, 0.00, 0.00`). Точно так же вы можете монииториь использование памяти с помощью `watch free`, по мере создания новых процессов:
 ```
 Every  2.0s: free            debian: Tue Aug 20 23:43:37 2019
 
@@ -187,7 +187,7 @@ Every  2.0s: free            debian: Tue Aug 20 23:43:37 2019
 Mem:       16274868      493984    14729396       35064     1051488    15462040
 Swap:      16777212           0    16777212
 ```
-Чтобы изменить интервал обновления для `watch`, используйте параметры `-n` или `--interval` плюс количество секунд, как в:
+Чтобы изменить интервал обновления `watch`, воспользуйтесь параметрами `-n` или `--interval` добавив количество секунд, как в:
 ```
 $ watch -n 5 free
 ```
