Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -10,4 +10,57 @@
 
 # Введение
 
-Инструменты и утилиты, рассмотренные в предыдущем уроке, очень полезны для мониторинга процессов в целом. Однако системному администратору, возможно, придется пойти еще дальше. В этом уроке мы обсудим концепцию терминальных мультиплексоров и узнаем о GNU Screen и tmux, поскольку - несмотря на современные и прекрасные терминальные эмуляторы - мультиплексоры по-прежнему сохраняют некоторые интересные, мощные функции для продуктивного системного администратора.
+Инструменты и утилиты, рассмотренные в предыдущем уроке, очень полезны для мониторинга процессов в целом. Однако системному администратору, возможно, придется пойти еще дальше. В этом уроке мы обсудим концепцию терминальных мультиплексоров и узнаем о *GNU Screen* и *tmux*, поскольку, несмотря на современные и прекрасные терминальные эмуляторы, мультиплексоры по-прежнему сохраняют некоторые интересные, мощные функции для продвинутого системного администратора.
+
+
+# Особенности терминальных мультиплексоров
+
+В электронике мультиплексор (или `mux`) - это устройство, которое позволяет подключать несколько входов к одному выходу. Таким образом, оконечный мультиплексор дает нам возможность переключаться между различными входами по мере необходимости. Хотя это и не совсем то же самое, но экран и `tmux` имеют ряд общих функций: 
+
+* Любой успешный вызов приведет как минимум к сеансу, который, в свою очередь, будет включать как минимум окно. Окна содержат программы. 
+* Окна можно разделить на области или панели, что может повысить производительность при одновременной работе с различными программами. 
+* Легкость управления: для запуска большинства команд используется комбинация клавиш - так называемый префикс команды или командная клавиша - за которым следует другой символ. 
+* Сеансы можно отключать от текущего терминала (то есть программы отправляются в фоновый режим и продолжают работать). Это гарантирует полное выполнение программ, независимо от закрытия терминала, зависания или потери удаленного соединения. 
+* Подключение к сокету. 
+* Режим копирования. 
+* Они легко настраиваются.
+
+
+# GNU Screen
+
+В ранние годы Unix (1970-1980-е) компьютеры в основном состояли из терминалов, подключенных к центральному компьютеру. Это все, никаких окон или вкладок. И это стало причиной создания *GNU Screen* в 1987 году: эмуляция нескольких независимых *VT100 экранов* на одном физическом терминале.
+
+
+# Окна
+
+GNU Screen вызывается простым вводом `screen` в терминал. Сначала вы увидите приветственное сообщение:
+```
+GNU Screen version 4.05.00 (GNU) 10-Dec-16
+
+Copyright (c) 2010 Juergen Weigert, Sadrul Habib Chowdhury
+Copyright (c) 2008, 2009 Juergen Weigert, Michael Schroeder, Micah Cowan, Sadrul Habib Chowdhury
+Copyright (c) 1993-2002, 2003, 2005, 2006, 2007 Juergen Weigert, Michael Schroeder
+Copyright (c) 1987 Oliver Laumann
+(...)
+```
+Нажмите пробел или Enter, чтобы закрыть сообщение, и вам будет показана командная строка:
+```
+$
+```
+Может показаться, что ничего не произошло, но факт в том, что `screen` уже создал и управляет своим первым сеансом и окном. Префикс команды экрана - `Ctrl`+`a`. Чтобы увидеть все окна в нижней части дисплея терминала, введите `Ctrl`+`a-w`:
+```
+0*$ bash
+```
+Вот оно, наше пока единственное окно! Обратите внимание, что счет начинается с `0`. Чтобы создать другое окно, введите `Ctrl`+`a-c`. Вы увидите новую подсказку. Давайте запустим `ps` в этом новом окне:
+```
+$ ps
+  PID TTY          TIME CMD
+  974 pts/2    00:00:00 bash
+  981 pts/2    00:00:00 ps
+```
+и снова введите `Ctrl`+`a-w`:
+```
+0-$ bash  1*$ bash
+```
+
+
