Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -62,5 +62,59 @@ $ ps
 ```
 0-$ bash  1*$ bash
 ```
+Здесь у нас есть два окна (обратите внимание на звездочку, указывающую на то, что отображается в данный момент). Однако, поскольку они были начаты с Bash, им обоим дано одно и то же имя. Поскольку мы вызвали `ps` в нашем текущем окне, давайте переименуем его с тем же именем. Для этого вам нужно набрать `Ctrl`+`a-A` и при появлении запроса написать новое имя окна (`ps`):
+```
+Set window's title to: ps
+```
+Теперь давайте создадим еще одно окно, но с самого начала дадим ему имя: `yetanotherwindow`. Это делается путем вызова `screen` с ключом `-t`:
+```
+$ screen -t yetanotherwindow
+```
+Перемещаться между окнами можно разными способами: 
+* Используя `Ctrl`+`a-n` (перейти к следующему окну) и `Ctrl`+`a-p` (перейти к предыдущему окну). 
+* Используя `Ctrl`+`a-номер` (перейти к номеру окна). Используя `Ctrl`+`a-"`, чтобы увидеть список всех окон. 
+* Вы можете перемещаться вверх и вниз с помощью клавиш со стрелками и выбрать то, которое вы хотите, с помощью Enter:
+```
+Num Name                                                Flags
+
+   0 bash                                                   $
+   1 ps                                                     $
+   2 yetanotherwindow
+```
+При работе с окнами важно помнить следующее: окна запускают свои программы совершенно независимо друг от друга. Программы будут продолжать работать, даже если их окно не отображается (также, когда сеанс экрана отключен, как мы вскоре увидим). Чтобы удалить окно, просто завершите программу, работающую в нем (как только последнее окно будет удалено, `screen` завершит свою работу). Или используйте `Ctrl`+`a-k` в окне, которое вы хотите удалить; вас попросят подтвердить:
+```
+Really kill this window [y/n]
+
+Window 0 (bash) killed.
+```
+
+
+# Области (Regions)
+
+`screen` может разделить экран терминала на несколько областей для размещения окон. Это разделение может быть горизонтальным (`Ctrl`+`a-S`) или вертикальным (`Ctrl`+`a-|`). Единственное, что будет отображаться в новом регионе, это  `--` внизу, что означает, что он пуст:
+```
+1 ps                                                               --
+```
+Чтобы перейти в новую область, введите `Ctrl`+`a-Tab`. Теперь вы можете добавить окно любым из методов, которые мы уже видели, например: `Ctrl`+`a-2`. Теперь `--` должно было превратиться в `2 yetanotherwindow`:
+```
+$ ps                                                  $
+  PID TTY          TIME CMD
+ 1020 pts/2    00:00:00 bash
+ 1033 pts/2    00:00:00 ps
+$ screen -t yetanotherwindow
+
+
+
+
+   1 ps                                                                2 yetanotherwindow
+```
+При работе с областями следует учитывать следующие важные аспекты: 
+* Вы перемещаетесь между областями, нажимая `Ctrl`+`a-Tab`. 
+* Вы можете завершить все области, кроме текущего, с помощью `Ctrl`+`a-Q`. Вы можете завершить текущую область с помощью `Ctrl`+`a-X`. 
+* Завершение области не завершает связанное с ней окно.
+
+
+# Сессии
+
 
 
