Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -116,5 +116,51 @@ $ screen -t yetanotherwindow
 
 # Сессии
 
+До сих пор мы играли с несколькими окнами и областями, но все они принадлежали одной и той же сессии. Пора начать играть с сессиями. Чтобы увидеть список всех сеансов, введите `screen -list` или `screen -ls`:
+```
+$ screen -list
+There is a screen on:
+        1037.pts-0.debian       (08/24/19 13:53:35)     (Attached)
+1 Socket in /run/screen/S-carol.
+```
+На данный момент это наша единственная сессия: 
+* `PID`   
+1037 
+* `Name`  
+pts-0.debian (с указанием терминала - в нашем случае подчиненного псевдотерминала - и имени хоста). 
+`Status`  
+`Attached` 
+
+Давайте создадим новый сеанс, дав ему более описательное имя:
+```
+$ screen -S "second session"
+```
+Дисплей терминала очистится, и вам будет предложено новое приглашение. Вы можете проверить наличие сеансов еще раз:
+```
+$ screen -ls
+There are screens on:
+        1090.second session     (08/24/19 14:38:35)     (Attached)
+        1037.pts-0.debian       (08/24/19 13:53:36)     (Attached)
+2 Sockets in /run/screen/S-carol.
+```
+Чтобы завершить сеанс, закройте все его окна или просто введите команду `screen -S SESSION-PID -X quit` (вместо этого вы также можете указать имя сеанса). Избавимся от нашей первой сессии:
+```
+$ screen -S 1037 -X quit
+```
+Вы будете отправлены обратно в окно терминала за пределами экрана. Но помните, что наша вторая сессия все еще жива:
+```
+$ screen -ls
+There is a screen on:
+	1090.second session	(08/24/19 14:38:35)	(Detached)
+1 Socket in /run/screen/S-carol.
+```
+Однако, поскольку мы уничтожили его родительский сеанс, ему присвоен новый ярлык: `Detached`.
 
 
+## Отключенный сеанс
+
+По ряду причин вы можете захотеть отсоединить сеанс от его терминала: 
+* Чтобы позволить вашему компьютеру на работе делать свои дела и подключаться удаленно позже из дома. 
+* Чтобы поделиться сеансом с другими пользователями. 
+
+Вы отключаете сеанс с помощью комбинации клавиш `Ctrl`+`a-d`. Вы вернетесь в свой терминал:
