Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -1,4 +1,4 @@
-# 103.5 Урок 1
+# 103.5 Урок 2
 
 | Сертификат:   | LPIC-1                                      |
 |:--------------|:--------------------------------------------|
@@ -164,3 +164,35 @@ There is a screen on:
 * Чтобы поделиться сеансом с другими пользователями. 
 
 Вы отключаете сеанс с помощью комбинации клавиш `Ctrl`+`a-d`. Вы вернетесь в свой терминал:
+```
+[detached from 1090.second session]
+$
+```
+Чтобы снова подключиться к сеансу, используйте команду `screen -r SESSION-PID`. В качестве альтернативы вы можете использовать `SESSION-NAME`, как мы видели ранее. Если существует только один отдельный сеанс, ни один из них не является обязательным:
+```
+$ screen -r
+```
+Этой команды достаточно, чтобы повторно подключиться к нашему второму сеансу:
+```
+$ screen -ls
+There is a screen on:
+        1090.second session      (08/24/19 14:38:35)     (Attached)
+1 Socket in /run/screen/S-carol.
+```
+Важные параметры для повторного подключения сеанса:
+* `-d -r`  
+Повторно подключите сеанс и, если необходимо, сначала отсоедините его. 
+* `-d -R`  
+То же, что и `-d -r`, но `screen` даже сначала создаст сеанс, если он не существует.
+* `-d -RR`  
+То же, что и `-d -R`. Однако используйте первый сеанс, если доступно более одного сеанса. 
+* `-D -r`  
+Повторно подключите сеанс. При необходимости сначала отсоедините и выйдите из системы удаленно. 
+* `-D -R`  
+Если сеанс запущен, подключитесь повторно (при необходимости сначала отключите и выйдите из системы удаленно). Если он не запущен, создайте его и уведомите пользователя. 
+* `-D -RR`  
+То же, что и `-D -R` - только сильнее. 
+* `-d -m`  
+Стартовый экран в автономном режиме. Это создает новый сеанс, но не подключается к нему. Это полезно для сценариев запуска системы. 
+* `-D -m` То же, что и `-d -m`, но не разветвляет новый процесс. Команда завершается, если сеанс завершается. Прочтите страницы руководства для `screen`, чтобы узнать о других возможностях.
+
