Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -196,3 +196,193 @@ There is a screen on:
 Стартовый экран в автономном режиме. Это создает новый сеанс, но не подключается к нему. Это полезно для сценариев запуска системы. 
 * `-D -m` То же, что и `-d -m`, но не разветвляет новый процесс. Команда завершается, если сеанс завершается. Прочтите страницы руководства для `screen`, чтобы узнать о других возможностях.
 
+
+## Копирование и вставка: режим прокрутки
+
+*Screen GNU* имеет режим копирования или обратной прокрутки. После ввода вы можете перемещать курсор в текущем окне и по содержимому его истории с помощью клавиш со стрелками. Вы можете пометить текст и скопировать его в окнах. Следующие шаги: 
+* Войдите в режим копирования/прокрутки: `Ctrl`+`a- [`. 
+* Переместитесь в начало фрагмента текста, который вы хотите скопировать, с помощью клавиш со стрелками. Отметьте начало фрагмента текста, который вы хотите скопировать: `Пробел`. 
+* Переместитесь в конец фрагмента текста, который вы хотите скопировать, с помощью клавиш со стрелками. Отметьте конец фрагмента текста, который вы хотите скопировать: `Пробел`.
+* Перейдите в выбранное вами окно и вставьте фрагмент текста: `Ctrl`+`a-]`.
+
+## Настройка экрана
+
+Общесистемным файлом конфигурации для экрана является `/etc/screenrc`. В качестве альтернативы можно использовать настройки на уровне пользователя `~/.screenrc`. Файл включает четыре основных раздела конфигурации: 
+
+* `SCREEN SETTINGS`  
+Вы можете определить общие настройки, указав директиву, за которой следует пробел и значение, как в: `defscrollback 1024`. 
+* `SCREEN KEYBINDINGS`  
+Этот раздел весьма интересен, поскольку позволяет вам переопределить сочетания клавиш, которые могут мешать повседневному использованию терминала. Используйте ключевое слово `bind`, за которым следует пробел, символ, который следует использовать после префикса команды, еще один пробел и команду, например: `bind l kill` (этот параметр изменит способ закрытия окна по умолчанию на `Ctrl`+`a-l`). Чтобы отобразить все привязки экрана, введите `Ctrl`+`a-?` или обратитесь к странице руководства. 
+
+>Конечно, вы также можете изменить сам префикс команды. Например, чтобы перейти от `Ctrl`+`a` к `Ctrl`+`b`, просто добавьте эту строку: `escape ^ Bb`.
+ 
+* `TERMINAL SETTINGS`  
+Этот раздел включает в себя настройки, связанные, среди прочего, с размерами окон терминала и буферами. Например, чтобы включить неблокирующий режим, чтобы лучше справляться с нестабильными ssh-соединениями, используется следующая конфигурация: `defnonblock 5`. 
+* `STARTUP SCREENS`  
+Вы можете включать команды для запуска различных программ при запуске экрана; например: `screen -t top top` (экран откроет окно с именем "top" с `top` внутри).
+
+
+# tmux
+
+`tmux` был выпущен в 2007 году. Хотя он очень похож на `screen`, он имеет несколько заметных отличий: 
+* Модель клиент-сервер: сервер предоставляет несколько сеансов, каждый из которых может иметь несколько окон, связанных с ним, которые, в свою очередь, могут использоваться различными клиентами. 
+* Интерактивный выбор сеансов, окон и клиентов через меню. 
+* Одно и то же окно можно связать с несколькими сеансами. 
+* Доступность раскладок клавиш как `vim`, так и `Emacs`. Поддержка UTF-8 и 256-цветного терминала.
+
+
+## Окна
+
+`tmux` можно вызвать, просто набрав `tmux` в командной строке. Вам будет показано приглашение оболочки и строка состояния внизу окна:
+```
+[0] 0:bash*                                                        "debian" 18:53 27-Aug-19
+```
+Помимо `hostname`, времени и даты, в строке состояния отображается следующая информация:
+* Название сессии  
+`[0]` 
+* Номер окна  
+`0:` 
+* Имя окна  
+`bash *`. По умолчанию это имя программы, запущенной внутри окна, и, в отличие от `screen`, `tmux` автоматически обновит его, чтобы отразить текущую запущенную программу. Обратите внимание на звездочку, указывающую, что это текущее видимое окно. 
+
+Вы можете назначить имена сеансу и окну при вызове `tmux`:
+```
+$ tmux new -s "LPI" -n "Window zero"
+```
+Строка состояния изменится соответственно:
+```
+[LPI] 0:Window zero*                                                 "debian" 19:01 27-Aug-19
+```
+Префикс команды `tmux` - `Ctrl`+`b`. Чтобы создать новое окно, просто введите `Ctrl`+`b-c`; вы перейдете к новому запросу, и в строке состояния отобразится новое окно:
+```
+[LPI] 0:Window zero- 1:bash*                                         "debian" 19:02 27-Aug-19
+```
+Поскольку Bash является базовой оболочкой, новому окну по умолчанию дается это имя. Начните сверху и посмотрите, как имя меняется на `top`:
+```
+[LPI] 0:Window zero- 1:top*                                         "debian" 19:03 27-Aug-19
+```
+В любом случае вы можете переименовать окно с помощью `Ctrl`+`b`-`,`. При появлении запроса введите новое имя и нажмите `Enter`:
+```
+(rename-window) Window one
+```
+Вы можете отобразить все окна для выбора с помощью `Ctrl`+`b`-`w` (используйте клавиши со стрелками для перемещения вверх и вниз и введите для выбора):
+```
+(0)  0: Window zero- "debian"
+(1)  1: Window one* "debian"
+```
+Подобно экрану, мы можем переходить из одного окна в другое с помощью: `Ctrl`+`b`-`n` перейти к следующему окну. `Ctrl`+`b`-`p` перейти к предыдущему окну. `Ctrl`+`b`-`число` перейти к номеру окна. Чтобы избавиться от окна, используйте `Ctrl`+`b`-`&`. Вам будет предложено подтвердить:
+```
+kill-window Window one? (y/n)
+```
+К другим интересным оконным командам относятся:
+* `Ctrl`+`b`-`f`  
+найти окно по имени. 
+* `Ctrl`+`b`-`.`  
+изменить порядковый номер окна. 
+
+Чтобы прочитать весь список команд, обратитесь к странице руководства.
+
+## Панели
+
+Средство разделения экрана `screen` также присутствует в `tmux`. Однако полученные подразделения не называются областями, а панелями. Наиболее важное различие между областями и панелями состоит в том, что последние представляют собой полные псевдотерминалы, связанные с окном. Это означает, что уничтожение панели также приведет к уничтожению ее псевдотерминала и всех связанных с ним программ, работающих внутри. Чтобы разделить окно по горизонтали, мы используем `Ctrl`+`b`-`"`:
+```
+Tasks:  93 total,   1 running,  92 sleeping,   0 stopped,   0 zombie
+%Cpu(s):  0.0 us,  0.0 sy,  0.0 ni,100.0 id,  0.0 wa,  0.0 hi,  0.0 si,  0.0 st
+KiB Mem :  4050960 total,  3730920 free,   114880 used,   205160 buff/cache
+KiB Swap:  4192252 total,  4192252 free,        0 used.  3716004 avail Mem
+
+  PID USER      PR  NI    VIRT    RES    SHR S %CPU %MEM     TIME+ COMMAND
+ 1340 carol     20   0   44876   3400   2800 R  0.3  0.1   0:00.24 top
+    1 root      20   0  139088   6988   5264 S  0.0  0.2   0:00.50 systemd
+    2 root      20   0       0      0      0 S  0.0  0.0   0:00.00 kthreadd
+    3 root      20   0       0      0      0 S  0.0  0.0   0:00.04 ksoftirqd/0
+    4 root      20   0       0      0      0 S  0.0  0.0   0:01.62 kworker/0:0
+    5 root       0 -20       0      0      0 S  0.0  0.0   0:00.00 kworker/0:0H
+    7 root      20   0       0      0      0 S  0.0  0.0   0:00.06 rcu_sched
+    8 root      20   0       0      0      0 S  0.0  0.0   0:00.00 rcu_bh
+    9 root      rt   0       0      0      0 S  0.0  0.0   0:00.00 migration/0
+   10 root       0 -20       0      0      0 S  0.0  0.0   0:00.00 lru-add-drain
+   11 root      rt   0       0      0      0 S  0.0  0.0   0:00.01 watchdog/0
+   12 root      20   0       0      0      0 S  0.0  0.0   0:00.00 cpuhp/0
+$
+───────────────────────────────────────────────────────────────────────────────────────────────
+$
+
+
+
+
+
+
+
+
+
+
+
+
+[LPI] 0:Window zero- 1:Window one*                                      "debian" 19:05 27-Aug-19
+```
+Чтобы разделить его по вертикали, используйте `Ctrl`+`b`-`%`:
+```
+                                                                            │$
+    1 root      20   0  139088   6988   5264 S  0.0  0.2   0:00.50 systemd     │
+                                                                               │
+    2 root      20   0       0      0      0 S  0.0  0.0   0:00.00 kthreadd    │
+                                                                               │
+    3 root      20   0       0      0      0 S  0.0  0.0   0:00.04 ksoftirqd/0 │
+    4 root      20   0       0      0      0 S  0.0  0.0   0:01.62 kworker/0:0 │
+    5 root       0 -20       0      0      0 S  0.0  0.0   0:00.00 kworker/0:0H│
+    7 root      20   0       0      0      0 S  0.0  0.0   0:00.06 rcu_sched   │
+    8 root      20   0       0      0      0 S  0.0  0.0   0:00.00 rcu_bh      │
+    9 root      rt   0       0      0      0 S  0.0  0.0   0:00.00 migration/0 │
+                                                                               │
+   10 root       0 -20       0      0      0 S  0.0  0.0   0:00.00 lru-add-drai│
+n                                                                              │
+   11 root      rt   0       0      0      0 S  0.0  0.0   0:00.01 watchdog/0  │
+                                                                               │
+   12 root      20   0       0      0      0 S  0.0  0.0   0:00.00 cpuhp/0     │
+                                                                               │
+$                                                                              │
+───────────────────────────────────────────────────────────────────────────────┴───────────────
+$
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+[LPI] 0:Window zero- 1:Window one*                                      "debian" 19:05 27-Aug-19
+```
+Чтобы уничтожить текущую панель (вместе с псевдотерминалом, работающим в ней, вместе со всеми связанными программами), используйте `Ctrl`+`b`-`x`. Вам будет предложено подтвердить в строке состояния:
+```
+kill-pane 1? (y/n)
+```
+Важные команды панели: 
+* `Ctrl`+`b`-`↑`, `↓`, `←`, `→`  
+перемещаться между панелями. 
+* `Ctrl`+`b`-`;`  
+перейти к последней активной панели. 
+* `Ctrl`+`b`-`Ctrl`+`клавиша со стрелкой`  
+изменить размер панели на одну строку. 
+* `Ctrl`+`b`-`Alt`+`клавиша со стрелкой`  
+изменить размер панели на пять строк. 
+* `Ctrl`+`b`-`{`  
+поменять местами панели (текущие на предыдущие). 
+* `Ctrl`+`b`-`}`  
+поменять местами панели (с текущей на следующую). 
+* `Ctrl`+`b`-`z`  
+увеличить/уменьшить панель.
+* `Ctrl`+`b`-`t`  
+`tmux` отображает на панели причудливые часы (убейте их, нажав `q`). 
+* `Ctrl`+`b`-`!`  
+превратить панель в окно. 
+
+Чтобы прочитать весь список команд, обратитесь к странице руководства.
