Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -370,9 +370,9 @@ kill-pane 1? (y/n)
 перемещаться между панелями. 
 * `Ctrl`+`b`-`;`  
 перейти к последней активной панели. 
-* `Ctrl`+`b`-`Ctrl`+`клавиша со стрелкой`  
+* `Ctrl`+`b`-`Ctrl`+`arrow key`  
 изменить размер панели на одну строку. 
-* `Ctrl`+`b`-`Alt`+`клавиша со стрелкой`  
+* `Ctrl`+`b`-`Alt`+`arrow key`  
 изменить размер панели на пять строк. 
 * `Ctrl`+`b`-`{`  
 поменять местами панели (текущие на предыдущие). 
@@ -386,3 +386,65 @@ kill-pane 1? (y/n)
 превратить панель в окно. 
 
 Чтобы прочитать весь список команд, обратитесь к странице руководства.
+
+
+# Сессии
+
+Чтобы просмотреть сеансы в tmux, вы можете использовать `Ctrl`+`b`-`s`:
+```
+(0) + LPI: 2 windows (attached)
+```
+В качестве альтернативы вы можете использовать команду `tmux ls`:
+```
+$ tmux ls
+LPI: 2 windows (created Tue Aug 27 19:01:49 2019) [158x39] (attached)
+```
+Есть только один сеанс (LPI), который включает в себя два окна. Давайте создадим новый сеанс из нашего текущего сеанса. Этого можно добиться, нажав `Ctrl`+`b`, введите в командной строке `:new` и нажмите `Enter`. Вы будете отправлены в новый сеанс, что можно увидеть в строке состояния:
+```
+[2] 0:bash*                                                       "debian" 19:15 27-Aug-19
+```
+По умолчанию tmux назвал сеанс `2`. Чтобы переименовать его, используйте `Ctrl`+`b`-`$`. При появлении запроса введите новое имя и нажмите `Enter`:
+```
+(rename-session) Second Session
+```
+Вы можете переключать сеансы с помощью `Ctrl`+`b`-`s` (используйте клавиши со стрелками и `enter`):
+```
+(0) + LPI: 2 windows
+(1) + Second Session: 1 windows (attached)
+```
+Чтобы убить сеанс, вы можете использовать команду `tmux kill-session -t SESSION-NAME`. Если вы введете команду в текущем подключенном сеансе, вы выйдете из `tmux` и вернетесь к исходному сеансу терминала:
+```
+$ tmux kill-session -t "Second Session"
+[exited]
+$
+```
+
+## Отключенный сеанс
+
+Завершив вторую сессию, мы оказались вне `tmux`. Однако у нас все еще есть активная сессия. Спросите у `tmux` список сессий, и вы обязательно найдете его там:
+```
+$ tmux ls
+LPI: 2 windows (created Tue Aug 27 19:01:49 2019) [158x39]
+```
+Однако этот сеанс отключен от своего терминала. Мы можем прикрепить его с помощью `tmux attach -t SESSION-NAME` (attach можно заменить на at или - просто - a). Когда есть только один сеанс, указание имени необязательно:
+```
+$ tmux a
+```
+Теперь вы вернулись к сеансу; чтобы оторваться от него, нажмите `Ctrl`+`b`-`d`:
+```
+[detached (from session LPI)]
+$
+```
+>Один и тот же сеанс можно подключить к нескольким терминалам. Если вы хотите присоединить сеанс, убедившись, что он сначала отсоединен от любых других терминалов, используйте ключ `-d`: `tmux attach -d -t SESSION-NAME`.
+
+Важные команды для присоединения/отсоединения сеанса:
+* `Ctrl`+`b`-`D`  
+выберите, какого клиента отсоединить. 
+* `Ctrl`+`b`-`r`  
+обновите клиентский терминал. 
+
+Чтобы прочитать весь список команд, обратитесь к странице руководства.
+
+
+# Копирование и вставка: режим прокрутки
+
