--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -446,5 +446,107 @@ $
 Чтобы прочитать весь список команд, обратитесь к странице руководства.
 
 
-# Копирование и вставка: режим прокрутки
+## Копирование и вставка: режим прокрутки
 
+`tmux` также имеет режим копирования в основном так же, как `screen` (не забудьте использовать префикс команды `tmux`, а не `screen`!). Единственное отличие в командном отношении состоит в том, что вы используете `Ctrl`+`Пробел`, чтобы отметить начало выделения, и `Alt`+`w`, чтобы скопировать выделенный текст.
+
+## Настройка `tmux`
+
+Файлы конфигурации для `tmux` обычно находятся в `/etc/tmux.conf` и `~/.tmux.conf`. При запуске `tmux` создает эти файлы, если они существуют. Также существует возможность запуска `tmux` с ключом `-f` для предоставления альтернативного файла конфигурации. Вы можете найти пример файла конфигурации `tmux`, расположенный в `/usr/share/doc/tmux/example_tmux.conf`. Уровень настройки, которого вы можете достичь, действительно высок. Вот некоторые из вещей, которые вы можете сделать:
+* Измените префиксный ключ
+```
+# Change the prefix key to C-a
+set -g prefix C-a
+unbind C-b
+bind C-a send-prefix
+```
+* Установите дополнительные привязки клавиш для окон выше 9
+```
+# Some extra key bindings to select higher numbered windows
+bind F1 selectw -t:10
+bind F2 selectw -t:11
+bind F3 selectw -t:12
+```
+
+Чтобы получить полный список всех привязок, введите `Ctrl`+`b`-`?` (нажмите `q` для выхода) или обратитесь к странице руководства.
+
+# Упражнения для закрепления
+
+1. `oneko` - это забавная программа, которая отображает кошку, преследующую ваш курсор мыши. Если она еще не установлена на вашей системе, установите ее с помощью менеджера пакетов вашего дистрибутива. Мы будем использовать ее для изучения управления заданиями. 
+* Запустите программу. Как бы вы это сделали?
+```
+   
+```
+* Переместите курсор мыши, чтобы увидеть, как кошка его преследует. Теперь приостановите процесс. Как бы вы это сделали? Что будет на экране? 
+```
+
+```
+* Проверьте, сколько у вас сейчас работающих заданий. Как бы ты это сделал? Что будет на экране?
+```
+
+```
+* Теперь отправьте его в фоновый режим, указав его идентификатор задания. Что будет на экране?
+```
+
+```
+* Как узнать, что задание выполняется в фоновом режиме? 
+```
+
+```
+* Наконец, завершите задание, указав его номер. Как бы ты это сделал?
+```
+
+```
+2. Найдите `PID` всех процессов, порожденных веб-сервером Apache HTTPD(`apache2`), с помощью двух разных команд: 
+```
+
+
+```
+3. Завершите все процессы `apache2` без использования их PID и двумя разными командами: 
+```
+
+
+```
+4. Предположим, вам нужно завершить работу всех экземпляров `apache2`, и у вас нет времени узнать их идентификаторы `PID`. Как бы вы это сделали, используя `kill` с сигналом `SIGTERM` по умолчанию одной строкой: 
+```
+
+```
+5. Запустите `top` и взаимодействуйте с ним, выполнив следующие действия: 
+* Покажите список процессов в виде дерева: 
+```
+
+```
+* Покажите полные пути процессов, различающих пространство пользователя и пространство ядра: 
+```
+
+```
+6. Введите команду `ps`, чтобы отобразить все процессы, запущенные пользователем веб-сервера Apache HTTPD (`www-data`): 
+* Используя синтаксис BSD: 
+```
+
+```
+* Используя синтаксис UNIX: 
+```
+
+```
+* Используя синтаксис GNU:
+```
+
+```
+
+
+# Упражнения на размышление
+
+
+
+
+# Резюме
+
+
+
+
+# Ответы на упражнения для закрепления
+
+
+
+# Ответы на упражнения для размышления
