Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -157,44 +157,46 @@ There is a screen on:
 Однако, поскольку мы уничтожили его родительский сеанс, ему присвоен новый ярлык: `Detached`.
 
 
-## Отключенный сеанс
+## Отключаемая сессия
 
-По ряду причин вы можете захотеть отсоединить сеанс от его терминала: 
+По ряду причин вы можете захотеть отключить сессию от ее терминала: 
 * Чтобы позволить вашему компьютеру на работе делать свои дела и подключаться удаленно позже из дома. 
-* Чтобы поделиться сеансом с другими пользователями. 
+* Чтобы поделиться сессией с другими пользователями. 
 
-Вы отключаете сеанс с помощью комбинации клавиш `Ctrl`+`a-d`. Вы вернетесь в свой терминал:
+Вы можете отключить сесию с помощью комбинации клавиш `Ctrl`+`a-d`. При этом вы вернетесь в свой терминал:
 ```
 [detached from 1090.second session]
 $
 ```
-Чтобы снова подключиться к сеансу, используйте команду `screen -r SESSION-PID`. В качестве альтернативы вы можете использовать `SESSION-NAME`, как мы видели ранее. Если существует только один отдельный сеанс, ни один из них не является обязательным:
+Чтобы снова подключиться к сессии, используйте команду `screen -r SESSION-PID`. В качестве альтернативы вы можете использовать параметр `SESSION-NAME`, как мы видели выше. Если существует только одна сессия, то ни один из параметров не является обязательным:
 ```
 $ screen -r
 ```
-Этой команды достаточно, чтобы повторно подключиться к нашему второму сеансу:
+Этой команды достаточно, чтобы повторно подключиться к нашей сессии повторно:
 ```
 $ screen -ls
 There is a screen on:
         1090.second session      (08/24/19 14:38:35)     (Attached)
 1 Socket in /run/screen/S-carol.
 ```
-Важные параметры для повторного подключения сеанса:
+Важные параметры для повторного подключения к сессии:
 * `-d -r`  
-Повторно подключите сеанс и, если необходимо, сначала отсоедините его. 
+Повторно подключается к сессии и, если необходимо, сначала отключается от нее. 
 * `-d -R`  
-То же, что и `-d -r`, но `screen` даже сначала создаст сеанс, если он не существует.
+То же, что и `-d -r`, но `screen` сначала создаст сессию, если она не существует.
 * `-d -RR`  
-То же, что и `-d -R`. Однако используйте первый сеанс, если доступно более одного сеанса. 
+То же, что и `-d -R`. Однако использует первую сессию, если доступно более одной сессии. 
 * `-D -r`  
-Повторно подключите сеанс. При необходимости сначала отсоедините и выйдите из системы удаленно. 
+Повторно подключает сессию. При необходимости сначала отключает и выходит из системы удаленно. 
 * `-D -R`  
-Если сеанс запущен, подключитесь повторно (при необходимости сначала отключите и выйдите из системы удаленно). Если он не запущен, создайте его и уведомите пользователя. 
+Если сессия запущена, подключается повторно (при необходимости сначала отключает и выходит из системы удаленно). Если она не запущена, создает его и уведомляет пользователя. 
 * `-D -RR`  
 То же, что и `-D -R` - только сильнее. 
 * `-d -m`  
-Стартовый экран в автономном режиме. Это создает новый сеанс, но не подключается к нему. Это полезно для сценариев запуска системы. 
-* `-D -m` То же, что и `-d -m`, но не разветвляет новый процесс. Команда завершается, если сеанс завершается. Прочтите страницы руководства для `screen`, чтобы узнать о других возможностях.
+Стартовый экран в автономном режиме. Он создает новую сессию, но не подключается к ней. Это полезно для сценариев запуска системы. 
+* `-D -m` То же, что и `-d -m`, но не разветвляет новый процесс. Команда завершается, если сессия завершится. 
+
+Прочтите страницы руководства для `screen`, чтобы узнать о других возможностях.
 
 
 ## Копирование и вставка: режим прокрутки
