Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -201,11 +201,11 @@ There is a screen on:
 
 ## Копирование и вставка: режим прокрутки
 
-*Screen GNU* имеет режим копирования или обратной прокрутки. После ввода вы можете перемещать курсор в текущем окне и по содержимому его истории с помощью клавиш со стрелками. Вы можете пометить текст и скопировать его в окнах. Следующие шаги: 
-* Войдите в режим копирования/прокрутки: `Ctrl`+`a- [`. 
-* Переместитесь в начало фрагмента текста, который вы хотите скопировать, с помощью клавиш со стрелками. Отметьте начало фрагмента текста, который вы хотите скопировать: `Пробел`. 
-* Переместитесь в конец фрагмента текста, который вы хотите скопировать, с помощью клавиш со стрелками. Отметьте конец фрагмента текста, который вы хотите скопировать: `Пробел`.
-* Перейдите в выбранное вами окно и вставьте фрагмент текста: `Ctrl`+`a-]`.
+*Screen GNU* имеет режим копирования или прокрутки. После ввхода вы можете перемещать курсор в текущем окне или по содержимому его истории с помощью клавиш со стрелками. Вы можете помечать и копировать текст в окнах. Для этого следует: 
+* Войти в режим копирования/прокрутки: `Ctrl`+`a- [`. 
+* Переместиться в начало фрагмента текста, который вы хотите скопировать, с помощью клавиш со стрелками. Отметьте начало фрагмента текста, который вы хотите скопировать: `Пробел`. 
+* Переместиться в конец фрагмента текста, который вы хотите скопировать, с помощью клавиш со стрелками. Отметьте конец фрагмента текста, который вы хотите скопировать: `Пробел`.
+* Перейти в выбранное вами окно и вставить фрагмент текста: `Ctrl`+`a-]`.
 
 ## Настройка экрана
 
