Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -214,7 +214,9 @@ There is a screen on:
 * `SCREEN SETTINGS`  
 Вы можете определить общие настройки, указав директиву, за которой следует пробел и значение, как в: `defscrollback 1024`. 
 * `SCREEN KEYBINDINGS`  
-Этот раздел весьма интересен, поскольку позволяет вам переопределить сочетания клавиш, которые могут мешать повседневному использованию терминала. Используйте ключевое слово `bind`, за которым следует пробел, символ, который следует использовать после префикса команды, еще один пробел и команду, например: `bind l kill` (этот параметр изменит способ закрытия окна по умолчанию на `Ctrl`+`a-l`). Чтобы отобразить все привязки экрана, введите `Ctrl`+`a-?` или обратитесь к странице руководства. 
+Этот раздел весьма интересен, поскольку позволяет вам переопределить сочетания клавиш, которые могут мешать повседневному использованию терминала. Используйте ключевое слово `bind`, за которым следует пробел, символ, который следует использовать после префикса команды, еще один пробел и команду, например: `bind l kill` (этот параметр изменит способ закрытия окна по умолчанию на `Ctrl`+`a-l`). 
+
+Чтобы отобразить все привязки экрана, введите `Ctrl`+`a-?` или обратитесь к странице руководства. 
 
 >Конечно, вы также можете изменить сам префикс команды. Например, чтобы перейти от `Ctrl`+`a` к `Ctrl`+`b`, просто добавьте эту строку: `escape ^ Bb`.
  
