Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -476,67 +476,18 @@ bind F3 selectw -t:12
 
 # Упражнения для закрепления
 
-1. `oneko` - это забавная программа, которая отображает кошку, преследующую ваш курсор мыши. Если она еще не установлена на вашей системе, установите ее с помощью менеджера пакетов вашего дистрибутива. Мы будем использовать ее для изучения управления заданиями. 
-* Запустите программу. Как бы вы это сделали?
-```
-   
-```
-* Переместите курсор мыши, чтобы увидеть, как кошка его преследует. Теперь приостановите процесс. Как бы вы это сделали? Что будет на экране? 
-```
+Укажите, соответствуют ли следующие операторы/функции GNU Screen, tmux или обоим:
 
-```
-* Проверьте, сколько у вас сейчас работающих заданий. Как бы ты это сделал? Что будет на экране?
-```
-
-```
-* Теперь отправьте его в фоновый режим, указав его идентификатор задания. Что будет на экране?
-```
-
-```
-* Как узнать, что задание выполняется в фоновом режиме? 
-```
-
-```
-* Наконец, завершите задание, указав его номер. Как бы ты это сделал?
-```
-
-```
-2. Найдите `PID` всех процессов, порожденных веб-сервером Apache HTTPD(`apache2`), с помощью двух разных команд: 
-```
-
-
-```
-3. Завершите все процессы `apache2` без использования их PID и двумя разными командами: 
-```
-
-
-```
-4. Предположим, вам нужно завершить работу всех экземпляров `apache2`, и у вас нет времени узнать их идентификаторы `PID`. Как бы вы это сделали, используя `kill` с сигналом `SIGTERM` по умолчанию одной строкой: 
-```
-
-```
-5. Запустите `top` и взаимодействуйте с ним, выполнив следующие действия: 
-* Покажите список процессов в виде дерева: 
-```
-
-```
-* Покажите полные пути процессов, различающих пространство пользователя и пространство ядра: 
-```
-
-```
-6. Введите команду `ps`, чтобы отобразить все процессы, запущенные пользователем веб-сервера Apache HTTPD (`www-data`): 
-* Используя синтаксис BSD: 
-```
-
-```
-* Используя синтаксис UNIX: 
-```
-
-```
-* Используя синтаксис GNU:
-```
-
-```
+| Характеристика/Оператор       | GNU Screen  | tmux  |
+|:------------------------------|-------------|-------|
+| Префикс команды по умолчанию  
+`Ctrl`+`a`                      |             |       |
+| Модель клиент-сервер          |             |       |
+| Панели это псевдотерминалы    |             |       |
+| Завершение области не  
+уничтожает связанные с ней окна |             |       |
+| Сеансы включают окна          |             |       |
+| Сессии могут быть отключены   |             |       |
 
 
 # Упражнения на размышление
