Update 103.5 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -478,14 +478,12 @@ bind F3 selectw -t:12
 
 Укажите, соответствуют ли следующие операторы/функции GNU Screen, tmux или обоим:
 
-| Характеристика/Оператор       | GNU Screen  | tmux  |
-|:------------------------------|-------------|-------|
-| Префикс команды по умолчанию  
-`Ctrl`+`a`                      |             |       |
+| Характеристика/Оператор       | GNU Screen  | tmux          |
+|:------------------------------|-------------|---------------|
+| Префикс команды по умолчанию `Ctrl`+`a`  |
 | Модель клиент-сервер          |             |       |
 | Панели это псевдотерминалы    |             |       |
-| Завершение области не  
-уничтожает связанные с ней окна |             |       |
+| Завершение области не уничтожает связанные с ней окна |
 | Сеансы включают окна          |             |       |
 | Сессии могут быть отключены   |             |       |
 
