--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.5 Create, monitor and kill processes/103.5 Lesson 2.md
@@ -10,7 +10,7 @@
 
 # Введение
 
-Инструменты и утилиты, рассмотренные в предыдущем уроке, очень полезны для мониторинга процессов в целом. Однако системному администратору, возможно, придется пойти еще дальше. В этом уроке мы обсудим концепцию терминальных мультиплексоров и узнаем о *GNU Screen* и *tmux*, поскольку, несмотря на современные и прекрасные терминальные эмуляторы, мультиплексоры по-прежнему сохраняют некоторые интересные, мощные функции для продвинутого системного администратора.
+{: Инструменты и утилиты, рассмотренные в предыдущем уроке, очень полезны для мониторинга процессов в целом. Однако системному администратору, возможно, придется пойти еще дальше. В этом уроке мы обсудим концепцию терминальных мультиплексоров и узнаем о *GNU Screen* и *tmux*, поскольку, несмотря на современные и прекрасные терминальные эмуляторы, мультиплексоры по-прежнему сохраняют некоторые интересные, мощные функции для продвинутого системного администратора. :}
 
 
 # Особенности терминальных мультиплексоров
